changed naming in functions to ease understanding, corrected an issue with dragover and dragleave event (still one on firefox)

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,7 @@ header.side~footer {} */
 /** Dev **/
 .admin-tools {
     position:absolute;
+    z-index:30;
     left:75%;
     top:15%;
 }
